# baxter_common

./: .gitignore  CHANGELOG.rst  README.md  README.rst
baxter_common/: CMakeLists.txt  package.xml
baxter_core_msgs/: CMakeLists.txt  package.xml
baxter_core_msgs/msg/: AssemblyState.msg  HeadPanCommand.msg  HeadState.msg  JointCommand.msg  NavigatorState.msg  SEAJointState.msg  URDFConfiguration.msg
baxter_core_msgs/srv/: SolvePositionIK.srv
baxter_description/: CMakeLists.txt  package.xml
baxter_description/launch/: baxter.rviz  rviz_simulation.launch  rviz_simulation.launch.text
baxter_description/launch/rviz/: baxter.rviz
baxter_description/meshes.bak/electric_gripper/: electricgripper_collision.STL
baxter_description/meshes.bak/lower_elbow/: E1_collision.STL
baxter_description/meshes.bak/lower_forearm/: W1_collision.STL
baxter_description/meshes.bak/torso/: base_link.STL
baxter_description/meshes.bak/upper_elbow/: E0_collision.STL
baxter_description/meshes.bak/upper_forearm/: W0_collision.STL
baxter_description/meshes.bak/upper_shoulder/: S0_collision.STL
baxter_description/meshes.bak/wrist/: W2_collision.STL
baxter_description/meshes/base/: PEDESTAL_simple.DAE  PEDESTAL_simple.STL  pedestal_link_collision.DAE  pedestal_link_collision.STL
baxter_description/meshes/electric_gripper/: electricgripper.DAE  electricgripper_simple.DAE
baxter_description/meshes/head/: H0.DAE  H0_simple.DAE  H0_simple.STL  H1.DAE  H1_simple.DAE  H1_simple.STL
baxter_description/meshes/lower_elbow/: E1.DAE  E1_simple.DAE  E1_simple.STL
baxter_description/meshes/lower_forearm/: W1.DAE  W1_simple.DAE  W1_simple.STL
baxter_description/meshes/lower_shoulder/: S1.DAE  S1_simple.DAE  S1_simple.STL
baxter_description/meshes/torso/: base_link_collision.DAE  base_link_collision.STL  base_link_simple.DAE  base_link_simple.STL
baxter_description/meshes/upper_elbow/: E0.DAE  E0_simple.DAE  E0_simple.STL
baxter_description/meshes/upper_forearm/: W0.DAE  W0_simple.DAE  W0_simple.STL
baxter_description/meshes/upper_shoulder/: S0.DAE  S0_simple.DAE  S0_simple.STL
baxter_description/meshes/wrist/: W2.DAE  W2_simple.DAE  W2_simple.STL
baxter_description/urdf/: basic_hard_tip.xacro  baxter.urdf  baxter.urdf.xacro  baxter_base.xacro  baxter_electric_gripper.urdf.xacro  baxter_simple.urdf  convert_to_urdf_and_sdf.sh  extended_narrow.xacro  left_electric_gripper.xacro  left_end_effector.urdf.xacro  paddle_tip.xacro  rethink_electric_gripper.xacro  right_electric_gripper.xacro  right_end_effector.urdf.xacro  wide_extended.xacro
baxter_description/urdf/baxter_base/: baxter_base.gazebo.xacro  baxter_base.xacro
baxter_description/urdf/electric_gripper/: example_end_effector.urdf.xacro  rethink_electric_gripper.xacro
baxter_description/urdf/gazebo/: baxter.gazebo.urdf.xacro
baxter_maintenance_msgs/: CMakeLists.txt  package.xml
baxter_maintenance_msgs/msg/: CalibrateArmData.msg
(+42 files in other folders)
