<?xml version="1.0"?>
<package>
  <name>baxter_common</name>
  <version>1.2.0</version>
  <description>
    URDF, meshes, and custom messages describing the Baxter Research
    Robot from Rethink Robotics.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_common
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_common/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>baxter_description</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_maintenance_msgs</run_depend>
  <run_depend>rethink_ee_description</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
